--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,7 @@
 		    "Poei\\blog\\": "src/"
 	    }
     },
-    "require": {}
+    "require-dev": {
+        "phpunit/phpunit": "^7.0"
+    }
 }
