--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,13 @@
 		    "Poei\\blog\\": "src/"
 	    }
     },
-    "require": {}
+    "require": {
+        "symfony/http-foundation": "^4.1@dev",
+        "symfony/psr-http-message-bridge": "^1.0@dev",
+        "psr/http-message": "1.*",
+        "zendframework/zend-diactoros": "^1.7@dev"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.0"
+    }
 }
