--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,12 @@
         }
     ],
     "autoload": {
-	    "psr-4": {
-		    "Poei\\blog\\": "src/"
-	    }
+        "psr-4": {
+            "Poei\\blog\\": "src/"
+        }
     },
-    "require": {}
+    "require": {},
+    "require-dev": {
+        "phpunit/phpunit": "^7.0"
+    }
 }
